Switch to proxy-super+-
- Switch to `proxy-plus-minus`
- Upgrade Clojure to allow `lein test`